refactor(mapper): replace Collectors.toList() with List.toList() for improved readability
- Updated ProjectResponseMapper, AdminGetEducationService, AdminGetExperienceService, and GetCertificationService to use List.toList() instead of Collectors.toList() for stream operations, enhancing code clarity and conciseness.